@@ -1,5 +1,5 @@
 /*
- * $Id: vmysql.c,v 1.13 2004-01-07 16:06:16 tomcollins Exp $
+ * $Id: vmysql.c,v 1.14 2004-01-13 23:41:53 tomcollins Exp $
  * Copyright (C) 1999-2003 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -1358,7 +1358,7 @@ char *valias_select_all( char *alias, char *domain )
     if ( (err=vauth_open_read()) != 0 ) return(NULL);
 
     snprintf( SqlBufRead, SQL_BUF_SIZE, 
-        "select alias, valias_line from valias where domain = \"%s\"", domain );
+        "select alias, valias_line from valias where domain = \"%s\" order by alias", domain );
 
     if (mysql_query(&mysql_read,SqlBufRead)) {
         vcreate_valias_table();
